# image_gallery

./: Cargo.toml  Dockerfile  README-github.md  README.md  docker-compose.yml  generate_config.sh  generate_images_json.sh  index.html  styles.css
.forgejo/workflows/: docker-forgejo.yml  mirror-to-github.yml
.github/workflows/: docker-image.yml
src/: config.rs  main.rs  models.rs  router.rs
src/components/: gallery.rs  mod.rs
src/pages/: home.rs  mod.rs
static/: gallery-config.json  images.json
