[package]
name = "image_gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.21" # Use the latest version of Yew
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
gloo-net = "0.6" # For making HTTP requests
yew-hooks = "0.3.3"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlImageElement",
    "MouseEvent",
    "TouchEvent",
    "Window",
    "KeyboardEvent",
]}
yew-router = "0.18.0"
